--- a/1style.css
+++ b/1style.css
@@ -29,27 +29,34 @@ article{
   font-weight: 400!important;
   font-size: 2vw!important;
   
-  
+  color: #131313;
 }
 
 h1{
   font-size: 3vw;
   margin-bottom: 4vw;
+  color: #131313;
 }
 
 h2{
   font-size: 2vw;
   margin-bottom: 5%;
+  color: #131313;
+}
+
+h3{
+  font-size: 2.5vw;
+  color: #131313;
 }
 
 @media screen and (min-width: 601px) {
-  .hhh {
+  .h1 {
     font-size: 2.5vw!important;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .hhh {
+  .h1 {
     font-size: 40px!important ;
   }
 }
@@ -702,7 +709,7 @@ a#skip:active, a#skip:focus
 
 
 .bodyimage{
-  padding: 0 5% 0 5%;
+  padding: 0 15% 0 15%;
 }
 
 @media (max-width: 800px)
