--- a/1style.css
+++ b/1style.css
@@ -50,14 +50,26 @@ h3{
 }
 
 @media screen and (min-width: 601px) {
-  .h1 {
-    font-size: 2.5vw!important;
+  h1 {
+    font-size: 5vw!important;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .h1 {
-    font-size: 40px!important ;
+  h1 {
+    font-size: 30px!important ;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  h2 {
+    font-size: 4vw!important;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  h2 {
+    font-size: 30px!important ;
   }
 }
 
@@ -697,6 +709,22 @@ a#skip:active, a#skip:focus
   margin: 5vw 0vw 6vw 5vw!important;
 }
 /* top right bottom left */
+
+.blackground
+{
+  background: black!important;
+}
+
+
+@media (max-width: 800px){
+  .blackground  {
+    margin-left: 25%!important;
+
+  }
+}
+
+
+
 
 .imagecenter{
   margin-left: auto!important;
